--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FromBike/title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Yellowtail&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>BikeWi</title>
 </head>
 <body>
-    
+    <header class="header ">
+    <div class="header-flex container">
+        <a class="header-logo" href="#">BikeWi</a>
+
+        <nav class="header-menu">
+            <ul class="header-lista">
+                <li><a href="">Bicicletas</a></li>
+                <li><a href="">Seguros</a></li>
+                <li><a href="">Contatos</a></li>
+            </ul>
+        </nav>
+    </div>
+    </header>
 </body>
 </html>
