sessão banner concluida

--- a/index.html
+++ b/index.html
@@ -17,12 +17,29 @@
 
         <nav class="header-menu">
             <ul class="header-lista">
-                <li><a href="">Bicicletas</a></li>
-                <li><a href="">Seguros</a></li>
-                <li><a href="">Contatos</a></li>
+                <li><a href="#bicicletas">Bicicletas</a></li>
+                <li><a href="#garantia">Garantia</a></li>
+                <li><a href="#contatos">Contatos</a></li>
             </ul>
         </nav>
     </div>
     </header>
+
+    <main>
+        <section aria-label="banner" class="banner">
+            <div class="container">
+            <div class=" banner-principal">
+                <div class="banner-imagem">
+                <img src="assets/img/bikepreta3.jpg" alt="bicicleta de corrida na cor preta">
+            </div>
+                <div class="banner-contexto">
+                    <h1>Bicicletas na medida certa para você.</h1>
+                    <p>Explore o mundo com bicicletas elétricas de qualidade e precisão, todas as bicicletas são feita sobre medida. </p>
+                    <a class="botao" href="">Explorar mais</a>
+                </div>                
+            </div>
+        </div>
+        </section>
+    </main>
 </body>
 </html>
