sessão de tecnologia concluida

--- a/index.html
+++ b/index.html
@@ -1,45 +1,88 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Yellowtail&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Yellowtail&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>BikeWi</title>
-</head>
-<body>
-    <header class="header ">
-    <div class="header-flex container">
+  </head>
+  <body>
+    <header class="header">
+      <div class="header-flex container">
         <a class="header-logo" href="#">BikeWi</a>
 
         <nav class="header-menu">
-            <ul class="header-lista">
-                <li><a href="#bicicletas">Bicicletas</a></li>
-                <li><a href="#garantia">Garantia</a></li>
-                <li><a href="#contatos">Contatos</a></li>
-            </ul>
+          <ul class="header-lista">
+            <li><a href="#bicicletas">Bicicletas</a></li>
+            <li><a href="#garantia">Garantia</a></li>
+            <li><a href="#contatos">Contatos</a></li>
+          </ul>
         </nav>
-    </div>
+      </div>
     </header>
 
     <main>
-        <section aria-label="banner" class="banner">
-            <div class="container">
-            <div class=" banner-principal">
-                <div class="banner-imagem">
-                <img src="assets/img/bikepreta3.jpg" alt="bicicleta de corrida na cor preta">
+      <section aria-label="banner" class="banner">
+        <div class="container">
+          <div class="banner-principal">
+            <div class="banner-imagem">
+              <img
+                src="assets/img/bikepreta3.jpg"
+                alt="bicicleta de corrida na cor preta"
+              />
             </div>
-                <div class="banner-contexto">
-                    <h1>Bicicletas na medida certa para você.</h1>
-                    <p>Explore o mundo com bicicletas elétricas de qualidade e precisão, todas as bicicletas são feita sobre medida. </p>
-                    <a class="botao" href="">Explorar mais</a>
-                </div>                
+            <div class="banner-contexto">
+              <h1>Bicicletas na medida certa para você.</h1>
+              <p>
+                Explore o mundo com bicicletas elétricas de qualidade e
+                precisão, todas as bicicletas são feita sobre medida.
+              </p>
+              <a class="botao" href="">Explorar mais</a>
             </div>
+          </div>
         </div>
-        </section>
+      </section>
+
+      <section aria-label="tecnologia" class="tecnologia">
+        <div class="container tecnologia-principal">
+            <div class="tecnologia-descricao">
+                <h3>Tecnologia de ponta</h3>
+                <h2>As cores e componentes é você que escolhe.</h2>
+                <p>A personalização das cores fica a gosto do cliente, cada BikeWi é única e possui sua cara. 
+                    Garantindo mairo conforto e ergonomia no dia a dia as medidas são exatas para seu corpo e altura.
+                </p>
+
+                <div class="tecnologia-modelo">
+                    <h3>Escolha um modelo</h3>
+                    <ul>
+                        <li>
+                            <h4>Motor Elétrico</h4>
+                            <p>BikeWi e equipada com um motor elétrico que possui duração de até 100h. 
+                                A bateria carrega sozinha quando você aciona o modo pedalar.
+                            </p>
+                        </li>
+                        <li>
+                            <h4>Garantia Tecnologica</h4>
+                            <P>
+                                Essa tecnologia tem rastreador e função 
+                                anti-furto que quando acionado ela aciona o policia na mesma hora e envia um mapa do rastreio,                                 
+                                além de diminuir a velocidade até trava-la.
+                            </P>
+                        </li>
+                    </ul>
+                </div>             
+                
+            </div>
+            <img src="assets/img/variosmodelos.jpg" alt="a parte de traseira da bicicleta" class="tecnologia-bike">
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
