feita a sessão depoimento e escolha sua bike

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-flex container">
+      <div class="header-flex header-container">
         <a class="header-logo" href="#">BikeWi</a>
 
         <nav class="header-menu">
@@ -51,7 +51,7 @@
       </section>
 
       <section aria-label="tecnologia" class="tecnologia">
-        <div class="container tecnologia-principal">
+        <div class="tecnologia-principal">
             <div class="tecnologia-descricao">
                 <h3>Tecnologia de ponta</h3>
                 <h2>As cores e componentes é você que escolhe.</h2>
@@ -80,8 +80,54 @@
                 </div>             
                 
             </div>
+            <div>
             <img src="assets/img/variosmodelos.jpg" alt="a parte de traseira da bicicleta" class="tecnologia-bike">
+          </div>
         </div>
+      </section>
+
+      <section class="escolha container">
+        <h2 class="escolha-bicicleta">Escolha sua bicicleta.</h2>
+
+        <ul class="escolha-lista">
+          <li>
+            <a href="">
+              <img src="assets/img/bike2.jpg" alt="bicicleta">
+              <h3>Bike Supreme</h3>
+              <span>R$ 6999</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img src="assets/img/bikepreta.jpg" alt="bicicleta">
+              <h3>Bike Confort</h3>
+              <span>R$ 4999</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img src="assets/img/bike3.jpg" alt="bicicleta">
+              <h3>Bike Stantard</h3>
+              <span>R$ 3999</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="depoimento">
+        <div>
+          <img src="assets/img/beatriz-bike.jpg" alt="beatriz andando de bicicleta">
+        </div>
+
+        <div class="depoimento-descricao">
+        <blockquote>
+          <p> Há todos que amam pedalar a BikeWi intensificou o amor por esse esporte produzindo qualidade e 
+          conforto para mim, pedalar sempre foi minha alegria.</p>
+        </blockquote>
+        <span>María Alejandra</span>
+      </div>
       </section>
     </main>
   </body>
