sessão garantia personalizada finalizada

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </ul>
       </section>
 
-      <section class="depoimento">
+      <section aria-label="depoimento" class="depoimento">
         <div>
           <img src="assets/img/beatriz-bike.jpg" alt="beatriz andando de bicicleta">
         </div>
@@ -128,6 +128,40 @@
         </blockquote>
         <span>María Alejandra</span>
       </div>
+      </section>
+
+      <section class="garantia">
+        <div class="garantia-personalizada container">
+          <h2>Garantia Personalizada.</h2>
+          
+          <div class="garantia-lista">
+            <h3>Diamante</h3>
+            <span>R$ 800 <span>Anual</span></span>
+          <ul>
+            <li>Uma trocas por ano</li>
+            <li>Assistência técnica</li>
+            <li>Suporte em horario comercial</li>
+            <li>Cobertura Municipio e região metropolitana</li>
+          </ul>
+          <a class="botao-diamante" href="">Inscreva-se</a>
+        </div>
+
+        <div class="garantia-lista">
+          <h3>Platinum</h3>
+          <span>R$ 1300 <span>Anual</span></span>
+        <ul>
+          <li>Três trocas por ano</li>
+          <li>Assistência técnica</li>
+          <li>Suporte 24 horas</li>
+          <li>Cobertura Nacional</li>
+          <li>Desconto nas lojas parceiras</li>
+          <li>Acesso a eventos da BikeWi</li>
+          <li>BikeWi Club</li>          
+        </ul>
+        <a class="botao-platinum" href="">Inscreva-se</a>
+      </div>
+        </div>
+
       </section>
     </main>
   </body>
