inicio das opções de bicicletas da bikewi

--- a/index.html
+++ b/index.html
@@ -164,5 +164,35 @@
 
       </section>
     </main>
+
+    <footer>
+      <div class="footer-container container">
+        <div class="footer-personalizado">
+          <a href="" class="footer-logo">BikeWi</a>
+
+          <div class="footer-contato">
+            <h3>Contato</h3>
+            <span>+55 41 99999-9999</span>
+            <span>contato@bikewi.com</span>
+
+            <span>Rua bicicletis, 42 - Londrina</span>
+            <span>Paraná - PR</span>
+          </div>
+
+          <div class="footer-informacoes">
+            <nav class="footer-menu">
+              <h3>Informações</h3>
+              <ul class="footer-lista">
+                <li><a href="#bicicletas">Bicicletas</a></li>
+                <li><a href="#garantia">Garantia</a></li>
+                <li><a href="#contatos">Contatos</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <p>Todos direitos reservados a BikeWi</p>
+      </div>
+      
+    </footer>
   </body>
 </html>
