--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Yellowtail&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lora&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>BikeWi</title>
   </head>
@@ -39,7 +36,7 @@
               />
             </div>
             <div class="banner-contexto">
-              <h1>Bicicletas na medida certa para você.</h1>
+              <h1 class="titulos" >Bicicletas na medida certa para você.</h1>
               <p>
                 Explore o mundo com bicicletas elétricas de qualidade e
                 precisão, todas as bicicletas são feita sobre medida.
@@ -54,7 +51,7 @@
         <div class="tecnologia-principal">
             <div class="tecnologia-descricao">
                 <h3>Tecnologia de ponta</h3>
-                <h2>As cores e componentes é você que escolhe.</h2>
+                <h2 class="titulos">As cores e componentes é você que escolhe.</h2>
                 <p>A personalização das cores fica a gosto do cliente, cada BikeWi é única e possui sua cara. 
                     Garantindo mairo conforto e ergonomia no dia a dia as medidas são exatas para seu corpo e altura.
                 </p>
@@ -86,8 +83,8 @@
         </div>
       </section>
 
-      <section class="escolha container">
-        <h2 class="escolha-bicicleta">Escolha sua bicicleta.</h2>
+      <section aria-label="Escolha sua bicicleta"  class="escolha container">
+        <h2 class="escolha-bicicleta titulos">Escolha sua bicicleta.</h2>
 
         <ul class="escolha-lista">
           <li>
@@ -132,7 +129,7 @@
 
       <section class="garantia">
         <div class="garantia-personalizada container">
-          <h2>Garantia Personalizada.</h2>
+          <h2 class="titulos">Garantia Personalizada.</h2>
           
           <div class="garantia-lista">
             <h3>Diamante</h3>
